Wrapped main page into a table to avoid the basket to jump underneath in case there is not enough horizontal space

--- a/src/framework/style.css
+++ b/src/framework/style.css
@@ -83,6 +83,10 @@ td {
     padding-bottom: 5px;   /* Height of the footer */
 }
 
+#mainPageTable {
+    border-collapse: collapse;
+}
+
 
 a:link, a:visited, a:hover, a:active {    
     text-decoration: none;
